<resources>
    <string name="app_name">GoogleDrive</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="sing_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign up</string>
    <string name="avatar">Avatar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save_changes">Save changes</string>
    <string name="profile">Profile</string>
    <string name="Exit">Exit</string>
    <string name="nav_header_title">Header</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_cloud">Cloud</string>
    <string name="context_menu">context menu</string>
    <string name="name_folder">Folder name</string>
</resources>